fixed white space on side

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* -------  General Styles ------- */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 body {
   font-family: "Lato", sans-serif;
@@ -6,7 +14,7 @@ body {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 25px;
   font-weight: 400;
   margin: 0 10px 10px 10px;
   text-align: center;
